[package]
name = "poseidon-ark"
version = "0.0.1"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Poseidon hash implementation"
repository = "https://github.com/arnaucube/poseidon-ark"
readme = "README.md"

[dependencies]
ark-ff = { version = "0.4.0", default-features = false, features = ["asm"] }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-std = { version = "0.4.0", default-features = false, features = ["print-trace"] }
ark-serialize = { version = "0.4.0", default-features = false }

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
ark-ff = { version = "0.4.0", default-features = false, features = ["std"] }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["std", "curve"] }
ark-std = { version = "0.4.0", default-features = false, features = ["std"] }
ark-serialize = { version = "0.4.0", default-features = false, features = ["std"] }

[[bench]]
name = "bench_poseidon_hash"
harness = false
