[package]
name = "darklake-poseidon-ark"
version = "0.0.3"
authors = ["arnaucube <root@arnaucube.com>", "Darklake team"]
edition = "2021"
license = "Apache-2.0"
description = "Poseidon hash implementation"
repository = "https://github.com/darklakefi/poseidon-ark-gateway"
readme = "README.md"

[dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-std = { version = "0.4.0", default-features = false, features = [] }
ark-serialize = { version = "0.4.0", default-features = false }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_poseidon_hash"
harness = false

[[bin]]
name = "generate_constants"
path = "generate_constants.rs"
